--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,8 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <div class="container">
+      
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
