--- a/app/Profile.html
+++ b/app/Profile.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,132 +9,134 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" type="text/css"/>
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
+          rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
+          type="text/css"/>
 
-    <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
 
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="styles/animate.min.css" type="text/css">
 
-    <div class="container">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles/creative.css" type="text/css">
 
-      <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+</head>
+
+<body id="page-top">
+
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Love Bank <i class="glyphicon glyphicon-piggy-bank"></i></a>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-              <li><a href="/">Deposit</a></li>
-              <li><a href="/Mood.html">Mood</a></li>
-              <li class="active"><a href="/LoveBank.html">LoveBank</a></li>
-              <li><a id="profile-name" href="/Profile.html"></a></li>
+            <a class="navbar-brand page-scroll" href="#page-top">♥ Treasury</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="page-scroll" href="journal.html">Journal</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/welcome.html#about">About</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/welcome.html#services">Services</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/welcome.html#privacy">Privacy</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/welcome.html#contact">Contact</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/Profile.html">Profile</a>
+                </li>
             </ul>
-          </div>
         </div>
-      </nav>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h1>Profile Details</h1>
-
-          <form id="profile" action="/profiles" method="post" accept-charset="utf-8">
-            <fieldset class="form-group col-sm-12">
-              <label for="firstname">First Name</label>
-              <input class="form-control" type="text" name="firstname">
-            </fieldset>
-            <fieldset class="form-group col-sm-12">
-              <label for="lastname">Last Name</label>
-              <input class="form-control" type="text" name="lastname">
-            </fieldset>
-            <fieldset class="form-group col-sm-12">
-            <label for="email">Email</label>
-              <input class="form-control" type="email" name="email">
-            </fieldset>
-            <div class="form-group col-sm-12">
-              <button type="submit" class="btn btn-primary">Save</button>
-            </div>
-          </form>
-
-          <h3>Your partners email address</h3>
-          <p>This is used to link actions received by partners.</p>
-          <div id="linked_FirstName"></div>
-
-          <form id="linked-profile-form" action="/profiles?filter[email]=" method="get" accept-charset="utf-8">
-            <fieldset class="form-group col-sm-12">
-            <label for="email">Email</label>
-              <input class="form-control" type="email" name="email">
-            </fieldset>
-            <div class="form-group col-sm-12">
-              <button type="submit" class="btn btn-primary">Connect</button>
-            </div>
-          </form>
-
-        </div>
-      </div>
-      <div class="footer">
-        <p>♥ from the LoveBank team</p>
-      </div>
+        <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container-fluid -->
+</nav>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<header>
+    <div class="header-content">
+        <div class="header-content-inner">
+            <div class="row">
+                <h1>Profile</h1>
+                <form id="profile" action="/profiles" method="post" accept-charset="utf-8">
+                    <fieldset class="form-group col-sm-12">
+                        <label for="firstname">First Name</label>
+                        <input class="form-control" type="text" id="firstname" name="firstname">
+                    </fieldset>
+                    <fieldset class="form-group col-sm-12">
+                        <label for="lastname">Last Name</label>
+                        <input class="form-control" type="text" id="lastname" name="lastname">
+                    </fieldset>
+                    <fieldset class="form-group col-sm-12">
+                        <label for="email">Email</label>
+                        <input class="form-control" type="email" id="email" name="email">
+                    </fieldset>
+                    <div class="form-group col-sm-12">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </form>
+            </div>
 
-      ga('create', 'UA-73481201-1', 'auto');
-      ga('send', 'pageview');
-    </script>
+            <div class="row">
+                <h2>Partner</h2>
+                <p>Link or invite your partner to join. This is so that each of you can put credits into each others
+                    bank.</p>
+                <div id="linked_FirstName"></div>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+                <form id="linked-profile-form" action="/profiles?filter[email]=" method="get" accept-charset="utf-8">
+                    <fieldset class="form-group col-sm-12">
+                        <label for="email">Partners Email</label>
+                        <input class="form-control" type="email" name="email">
+                    </fieldset>
+                    <div class="form-group col-sm-12">
+                        <button type="submit" class="btn btn-primary">Connect</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</header>
 
-    <!-- build:js scripts/profile.js -->
-    <script src="scripts/profile.js"></script>
-    <!-- endbuild -->
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
 
-    <!-- build:js scripts/plugins.js -->
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
-    <!-- endbuild -->
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-    <script>
-      toastr.options = {
+<!-- Plugin JavaScript -->
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/jquery.fittext.js"></script>
+<script src="js/wow.min.js"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="js/creative.js"></script>
+
+<script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js"></script>
+
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<script>
+    toastr.options = {
         "closeButton": false,
         "debug": false,
         "newestOnTop": false,
@@ -150,7 +152,30 @@
         "hideEasing": "linear",
         "showMethod": "fadeIn",
         "hideMethod": "fadeOut"
-      }
-    </script>
-  </body>
+    }
+</script>
+
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-73481201-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
+
+<!-- build:js scripts/main.js -->
+<script src="scripts/profile.js"></script>
+<!-- endbuild -->
+
 </html>
