--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -11,7 +11,12 @@
 
   <link rel="icon" type="image/png" href="assets/img/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+  <!-- build:css styles/gsdk-base.css -->
+  <!-- bower:css -->
   <link href="assets/css/gsdk-base.css" rel="stylesheet"/>
+  <!-- endbower -->
+  <!-- endbuild -->
 
   <!-- Custom Fonts -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -137,13 +142,12 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap-wizard/1.2/jquery.bootstrap.wizard.min.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" type="text/javascript"></script>
 
-<!-- build:js scripts/profile.js -->
-<script src="scripts/profile.js"></script>
-<!-- endbuild -->
-</body>
-
+<!-- build:js scripts/main.js -->
+<script src="scripts/main.js"></script>
 <script src="assets/js/wizard.js"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<!-- endbuild -->
+
 
 </html>
