--- a/app/journal.html
+++ b/app/journal.html
@@ -11,7 +11,12 @@
 
   <link rel="icon" type="image/png" href="assets/img/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+  <!-- build:css styles/gsdk-base.css -->
+  <!-- bower:css -->
   <link href="assets/css/gsdk-base.css" rel="stylesheet"/>
+  <!-- endbower -->
+  <!-- endbuild -->
 
 
   <!-- Custom Fonts -->
@@ -21,8 +26,7 @@
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
-  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
-        type="text/css"/>
+  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -173,13 +177,13 @@
 
 <!-- build:js scripts/main.js -->
 <script src="scripts/main.js"></script>
+<script src="assets/js/wizard.js"></script>
 <!-- endbuild -->
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap-wizard/1.2/jquery.bootstrap.wizard.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-<script src="assets/js/wizard.js"></script>
 
 </body>
 </html>
