--- a/app/Account.html
+++ b/app/Account.html
@@ -17,6 +17,11 @@
   <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
         type="text/css"/>
   <link rel="stylesheet" href="styles/creative.css" type="text/css">
+  <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- build:css styles/gsdk-base.css -->
+  <!-- bower:css -->
   <link href="styles/gsdk-base.css" rel="stylesheet"/>
   <!-- endbower -->
   <!-- endbuild -->
@@ -186,23 +191,22 @@
 
 </div>
 
-<!-- build:js scripts/vendor.js -->
-<!-- bower:js -->
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js"></script>
-<!-- endbower -->
-<!-- endbuild -->
-
-
+<script src="//code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap-wizard/1.2/jquery.bootstrap.wizard.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap-wizard/1.2/jquery.bootstrap.wizard.min.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.js" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" type="text/javascript"></script>
 
 <!-- build:js scripts/profile.js -->
 <script src="scripts/profile.js"></script>
 <script src="scripts/creative.js"></script>
-<script src="scripts/wizard.js"></script>
+<!-- endbuild -->
+
+<!-- build:js scripts/wizard.js -->
+<script src="assets/js/wizard.js"></script>
 <!-- endbuild -->
 
 </body>
