--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -120,7 +120,7 @@
             </div>
             <div class="wizard-footer">
               <div class="pull-right">
-                <a class='btn btn-finish btn-fill btn-warning btn-wd btn-md' href="Journal.html">Continue</a>
+                <a class='btn btn-finish btn-fill btn-warning btn-wd btn-md' href="journal.html">Continue</a>
               </div>
               <div class="clearfix"></div>
             </div>
