--- a/app/index.html
+++ b/app/index.html
@@ -51,92 +51,42 @@
 </head>
 
 <body id="page-top">
-
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand page-scroll" href="index.html#page-top">♥ Treasury</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="page-scroll" href="journal.html">Journal</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="index.html#about">About</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="index.html#services">Services</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="index.html#privacy">Privacy</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="index.html#contact">Contact</a>
-        </li>
-        <li>
-          <a class="page-scroll" id="profile_link" href="Account.html">Account</a>
-        </li>
-        <li>
-          <a class="page-scroll" id="logout_link" style="display: none" href="logout.html">Logout</a>
+          <a class="page-scroll" id="profile_link" href="Account.html">Login</a>
         </li>
       </ul>
     </div>
-    <!-- /.navbar-collapse -->
   </div>
-  <!-- /.container-fluid -->
 </nav>
 
 <header>
   <div class="background-overlay"></div>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1>Love Treasury!</h1>
+      <h2>Love Treasury is just the perfect tool to tell your partner how much you appreciate them.</h2>
       <hr>
-      <p>The only place you will ever use to Journal your love!</p>
-      <h2 class="section-heading">Get started!</h2>
+      <p>Journal daily and receive insights into your partners love language.</p>
+      <h2 class="section-heading"></h2>
       <div class="row">
         <div class="col-lg-3 col-md-2"></div>
         <div class="col-lg-6 col-md-8">
-          <form id="start-with-email" action="Account.html" method="get" accept-charset="utf-8">
-            <fieldset class="form-group col-sm-12">
-              <input class="form-control" type="email" name="email" id="email" placeholder="Email Address">
-            </fieldset>
             <div class="form-group col-sm-12">
-              <button type="submit" class="btn btn-primary">Start now!</button>
+              <a class="btn btn-primary" href="Account.html">Get Started</a>
             </div>
-          </form>
         </div><!-- /.col-lg-6 -->
         <div class="col-lg-3  col-md-2"></div>
       </div><!-- /.row -->
     </div>
   </div>
 </header>
-
-<section class="bg-primary" id="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">We've got what you need!</h2>
-        <hr class="light">
-        <p class="text-faded">
-          Love Journal is just the perfect tool to tell your partner how much you appreciate them. Write in your journal
-          often or daily to tell them the things they have done that spoke love to you.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
 
 <section id="services">
   <div class="container">
@@ -181,112 +131,6 @@
   </div>
 </section>
 
-<section class="no-padding" id="portfolio">
-  <div class="container-fluid">
-    <div class="row no-gutter">
-      <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
-          <img src="images/portfolio/1.jpg" class="img-responsive" alt="">
-          <div class="portfolio-box-caption">
-            <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
-          <img src="images/portfolio/2.jpg" class="img-responsive" alt="">
-          <div class="portfolio-box-caption">
-            <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
-          <img src="images/portfolio/3.jpg" class="img-responsive" alt="">
-          <div class="portfolio-box-caption">
-            <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
-          <img src="images/portfolio/4.jpg" class="img-responsive" alt="">
-          <div class="portfolio-box-caption">
-            <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
-          <img src="images/portfolio/5.jpg" class="img-responsive" alt="">
-          <div class="portfolio-box-caption">
-            <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a href="#" class="portfolio-box">
-          <img src="images/portfolio/6.jpg" class="img-responsive" alt="">
-          <div class="portfolio-box-caption">
-            <div class="portfolio-box-caption-content">
-              <div class="project-category text-faded">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--aside class="bg-dark">
-    <div class="container text-center">
-        <div class="call-to-action">
-            <h2>Free Download at Start Bootstrap!</h2>
-            <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-        </div>
-    </div>
-</aside-->
-
 <section class="bg-primary" id="privacy">
   <div class="container">
     <div class="row">
@@ -326,33 +170,9 @@
 <script src="//code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
         crossorigin="anonymous"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js"
-        type="text/javascript"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap-wizard/1.2/jquery.bootstrap.wizard.min.js"
-        type="text/javascript"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" type="text/javascript"></script>
-<script>
-  toastr.options = {
-    "closeButton": false,
-    "debug": false,
-    "newestOnTop": false,
-    "progressBar": false,
-    "positionClass": "toast-bottom-left",
-    "preventDuplicates": false,
-    "onclick": null,
-    "showDuration": "300",
-    "hideDuration": "1000",
-    "timeOut": "5000",
-    "extendedTimeOut": "1000",
-    "showEasing": "swing",
-    "hideEasing": "linear",
-    "showMethod": "fadeIn",
-    "hideMethod": "fadeOut"
-  }
-</script>
 
 <!-- build:js scripts/main.js -->
 <script src="scripts/main.js"></script>
