--- a/app/journal.html
+++ b/app/journal.html
@@ -108,7 +108,7 @@
         <div class="wizard-container">
 
           <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-            <form id="entry" action="/entries" method="post" accept-charset="utf-8">
+            <form id="entry" action="/frank-entries" method="post" accept-charset="utf-8">
               <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
 
               <div class="wizard-header">
