--- a/app/Account.html
+++ b/app/Account.html
@@ -109,7 +109,7 @@
         <div class="wizard-container">
 
           <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-            <form id="profile" action="/profiles" method="post" accept-charset="utf-8">
+            <form id="profile" action="/frank-profiles" method="post" accept-charset="utf-8">
               <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
 
               <div class="wizard-header">
